add uas tag and crud; updated model fields; updated swagger ui
